teleport-cluster/namespace-teleport-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teleport-cluster
  annotations:
    argocd.argoproj.io/sync-options: PruneLast=true
    noa.re/manifest-id: dfd58efbe4a89cc6
