teleport-cluster/service-teleport-cluster-auth-v17.yaml
# Source: teleport-cluster
apiVersion: v1
kind: Service
metadata:
  name: teleport-cluster-auth-v17
  namespace: teleport-cluster
  labels:
    app.kubernetes.io/name: teleport-cluster
    app.kubernetes.io/instance: teleport-cluster
    app.kubernetes.io/component: auth
    app.kubernetes.io/version: 18.11.0
    teleport.dev/majorVersion: '18'
  annotations:
    noa.re/manifest-id: da2368c52e622237
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: teleport-cluster
    app.kubernetes.io/instance: teleport-cluster
    app.kubernetes.io/component: auth
    teleport.dev/majorVersion: '17'
